nf-pediatric --> sf-pediatric

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -51,3 +51,21 @@
 .inline-code code:last-child{
 	padding-left: 0;
 }
+
+/* Prevent Type column from wrapping in parameter tables */
+.sl-markdown-content table td:nth-child(3),
+.sl-markdown-content table th:nth-child(3) {
+	white-space: nowrap;
+}
+
+/* Prevent Parameter column from wrapping in parameter tables */
+.sl-markdown-content table td:nth-child(1),
+.sl-markdown-content table th:nth-child(1) {
+	white-space: nowrap;
+}
+
+/* Hide the Hidden column (6th column) in parameter tables */
+.sl-markdown-content table td:nth-child(6),
+.sl-markdown-content table th:nth-child(6) {
+	display: none;
+}
